[gd_scene load_steps=3 format=3 uid="uid://cuxa3on8jifhx"]

[ext_resource type="Script" path="res://MenuOptions.gd" id="1_svb6u"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_247g3"]
load_path = "res://.godot/imported/options 2.png-e1eaa494e127aa3ffb342617ada30afe.ctex"

[node name="MenuOptions" type="Node2D"]
script = ExtResource("1_svb6u")

[node name="MenuOptions" type="VBoxContainer" parent="."]
layout_direction = 1
offset_left = 88.0
offset_top = 54.0
offset_right = 1710.0
offset_bottom = 606.0
auto_translate = false
theme_override_constants/separation = 3
alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="MenuOptions"]
position = Vector2(864, 288)
scale = Vector2(0.744772, 0.744772)
texture = SubResource("CompressedTexture2D_247g3")

[node name="VolumeMusic" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Volume musique"

[node name="VolumeMusicBar" type="HSlider" parent="MenuOptions"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
mouse_force_pass_scroll_events = false
value = 100.0
rounded = true

[node name="VolumeClick" type="Button" parent="MenuOptions"]
layout_mode = 2
text = "Volume click
"

[node name="VolumeClickBar" type="HSlider" parent="MenuOptions"]
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
mouse_force_pass_scroll_events = false
value = 100.0

[node name="SaveButton" type="Button" parent="MenuOptions"]
layout_mode = 2
mouse_filter = 1
text = "Sauvegarder
"

[connection signal="drag_ended" from="MenuOptions/VolumeMusicBar" to="." method="_on_volume_music_changed"]
[connection signal="drag_ended" from="MenuOptions/VolumeClickBar" to="." method="_on_volume_click_changed"]
[connection signal="button_down" from="MenuOptions/SaveButton" to="." method="_on_button_save_down"]
